--- a/Indigo.css
+++ b/Indigo.css
@@ -5,34 +5,35 @@ License: MIT
 */
 
 :root {
-    --white: #FFFFFF;
+    --alert: #FF0000;
     --black: #000000;
-    --purple_bright: #4F37FF;
     --blue_light: #4F6EFF;
     --border_color: #555555;
-    --text: #888888;
+    --purple_bright: #4F37FF;
     --table_head: #008800;
     --table_hover: #00FF00;
+    --text: #888888;
+    --white: #FFFFFF;
 }
 
 a {
-    color: var(--blue_light);
+    color: var(--purple_bright);
 }
 
 a:hover {
-    color: var(--purple_bright);
+    color: var(--blue_light);
 }
 
 .alert-info {
     background-color: #222222;
     border-color: var(--border_color);
-    color: #FF0000;
+    color: var(--alert);
 }
 
 .alert-warning {
     background-color: #222222;
     border-color: var(--border_color);
-    color: #FF0000;
+    color: var(--alert);
 }
 
 .background {
@@ -48,6 +49,22 @@ body {
     background-color: var(--black);
     background: var(--black);
     color: var(--text);
+}
+
+.btn-group-vertical label.btn.btn-toggle, .btn-group label.btn.btn-toggle {
+color: var(--table_head);
+border-color: #222222;
+background-color: #111111;
+}
+
+.btn-group-vertical label.btn.btn-toggle.active, .btn-group label.btn.btn-toggle.active {
+color: var(--table_hover);
+background-color: #222222;
+}
+
+.btn-group-vertical label.btn.btn-toggle:hover, .btn-group label.btn.btn-toggle:hover {
+color: var(--table_head);
+background-color: #111111;
 }
 
 .btn-primary {
@@ -106,6 +123,12 @@ body {
     color: var(--text);
 }
 
+div#page-body form#postform div.well {
+border: 1px solid var(--white);
+box-shadow: inset 0 1px 1px #bcb8e0;
+background-color: var(--black);
+}
+
 div.navbar.navbar-default {
     background-image: linear-gradient(#222222, #111111);
 }
@@ -128,14 +151,18 @@ div.box p {
 
 div.postbody div.poster-info {
     background-color: #333333;
-    border-left: 1px solid var(--border_color);
-    border-bottom: 1px solid var(--border_color);
     border-top: 1px solid var(--border_color);
+    border-left: 1px solid var(--border_color);
     border-right: 1px solid var(--border_color);
+    border-bottom: 1px solid var(--border_color);
 }
 
 div.topic-nav {
     color: var(--blue_light);
+}
+
+.dropdown-header {
+    color: var(--white);
 }
 
 .dropdown-menu {
@@ -144,7 +171,28 @@ div.topic-nav {
 }
 
 .dropdown-menu .divider {
-    background-color: #222222;
+    background-color: #111111;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a {
+    background-color: #111111;
+    color: var(--table_head);
+    border-top: 1px solid #111111;
+    border-bottom: 1px solid #111111;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    background-color: #111111;
+    color: var(--table_hover);
+    border-top: 1px solid #111111;
+    border-bottom: 1px solid #111111;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:hover {
+    background-color: #111111;
+    color: var(--table_hover);
+    border-top: 1px solid #111111;
+    border-bottom: 1px solid #111111;
 }
 
 .featurette-heading {
@@ -200,9 +248,10 @@ input.btn.btn-cancel:hover {
 
 .navbar-inverse {
     background-image: linear-gradient(#222222, #111111);
+    color: var(--table_head)
 }
 
-.navbar-inverse .navbar-nav > li > a {
+.navbar-inverse .navbar-brand {
     color: var(--table_head);
 }
 
@@ -210,16 +259,34 @@ input.btn.btn-cancel:hover {
     color: var(--table_hover);
 }
 
-.navbar-inverse .navbar-brand {
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    background-color: #111111;
+    background-image: linear-gradient(#222222, #111111);
     color: var(--table_head);
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: var(--table_head);
+}
+
+.navbar-inverse .navbar-nav > li > a:hover {
+    color: var(--table_hover);
 }
 
 p {
     color: var(--text);
 }
 
+.panel {
+background-color: var(--black);
+}
+
+.panel-body {
+    background-image: linear-gradient(#222222, #111111);
+}
+
 .panel-heading {
-    color: var(--purple_bright);
+    color: var(--table_head);
     background-image: linear-gradient(#111111, #000000);
 }
 
@@ -227,10 +294,6 @@ p {
     color: var(--text);
     background-image: linear-gradient(#111111, #000000);
     background-color: var(--black);
-}
-
-.panel-body {
-    background-image: linear-gradient(#222222, #111111);
 }
 
 .selected {
@@ -252,10 +315,11 @@ span.breadcrumb {
 .table-bordered thead {
     background-color: var(--black);
     background-image: linear-gradient(#111111, #000000);
-    color: #000;
+    color: #000000;
     border-top: 1px solid var(--border_color) !important;
     border-left: 1px solid var(--border_color);
     border-right: 1px solid var(--border_color);
+    border-bottom: 1px solid var(--border_color);
 }
 
 .table-bordered > tbody > tr > td {
@@ -268,6 +332,7 @@ span.breadcrumb {
     border-top: 1px solid var(--border_color) !important;
     border-left: 1px solid var(--border_color);
     border-right: 1px solid var(--border_color);
+    border-bottom: 1px solid var(--border_color);
 }
 
 .table-bordered > tbody.topiclist > tr > td {
@@ -313,4 +378,9 @@ table thead a:hover {
 
 #trial-checkbox.checkbox label {
     color: var(--text);
+}
+
+.well {
+background-color: var(--black);
+border: 1px solid var(--white);
 }
